mechanism of showing tooltip, bug going behind table

--- a/app/assets/stylesheets/_elements/_tables.css.scss
+++ b/app/assets/stylesheets/_elements/_tables.css.scss
@@ -21,8 +21,9 @@ table {
 			background-color: $black;
 			color: $white;
 			bottom: 100%;
-			padding: 0.125em 0.25em;
+			padding: 0.125em 0.375em;
 			border-radius: 0.25em;
+			height: 100%;
 		}
 	}
 
